main.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
}

:root {
  /* text colors */
  --clr-bg-100: rgb(40, 135, 255);
   /* background colors */
  --clr-text-1: #fff;
  --clr-text-1a: #737373;
  --clr-text-0: #0a0a0a;
  --clr-primary: #2887ff;
  /* padding */
  --padding-5: 5px;
  --padding-10: 10px;
  --padding-15: 15px;
  --padding-20: 20px;
  --padding-25: 25px;
  --padding-30: 30px;
  --padding-40: 40px;
  
 /* margin */
  --margin-5: 5px;
  --margin-10: 10px;
  --margin-15: 15px;
  --margin-20: 20px;
  --margin-25: 25px;
  --margin-30: 30px;
  --margin-40: 40px;
  
/* box-shadow */
--b-shadow:  rgba(0, 0, 0, 0.2) 5px 5px 20px;
/* font-sizes */
--fts-xs: clamp(1rem, 2vw, 1.5rem);
--fts-s: clamp(1.2rem, 2vw, 2rem);
--fts-norm: clamp(1.5rem, 2vw, 2.3rem);
--fts-reg: clamp(1.5rem, 2vw + 2rem, 2.5rem);
--fts-mid: clamp(2rem, 2.5rem + 2vw, 3rem);
--fts-l: clamp(2rem, 2.5rem + 2vw, 3.5rem);
--fts-h1: clamp(3rem, 4rem + 1vw, 5rem);
/* font-Weight */
--ft-w-reg: 500;
--ft-w-bold: 600;
}

li {
  list-style: none;
}
a {
  text-decoration: none;
}
body {

 color: var(--clr-text-1);
 font-family: "DM Sans", sans-serif;
 line-height: 1.5;
}

.hightTowers-con {
  overflow: hidden;

}
 
.flex {
  display: flex;
   align-items: center;
}

.flex--row {
  justify-content: center;
}

.flex--spacebtwn {
  justify-content: space-between;
}

.flex--column {
  flex-direction: column;
  
}

nav {

  width: 100%;
  z-index: 100;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: all 0.5s;
}

.logo {
  cursor: pointer;
} 

.nav-links {
  display: flex;
  column-gap: 2rem;
  
  font-family: inherit;
  font-weight: var(--ft-w-bold);
  transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1) .10, opacity 1s cubic-bezier(0.4, 0, 0.2, 1).10;
}

.nav-links a {
  color: var(--clr-primary);
  display: inline-block;
  cursor: pointer;
  transition: transform .4s ease-in-out;
    
}

.nav-links a:hover, .nav-links a:focus {
  transform: scale(1.2);
}




.hamburger-con {
  display: none;
  cursor: pointer;
  order: 3;
  transition: all .10s ease-in;
}

.hamburger {
  width: 20px;
  height: 20px;
  background: none;
  border: none;
  cursor: pointer;
  outline: none;
  display: flex;
  flex-direction: column;
 
  transition: transform 0.4s cubic-bezier(0.4, 0, 0.2, 1), color 0.4s cubic-bezier(0.4, 0, 0.2, 1);
}

.ham {
  width: 20px;
  height: 2px;
  background-color: white;
  border-radius: 5px;
  cursor: pointer;
  transition: all .10s  ease-in;
   
}
.btn1, .btn2 {
  margin-bottom: 5px;
}

.isOpen .btn2 {
 opacity:0;
}

.isOpen .btn1 {
  transform: rotate(45deg) translate(5px, 5px);
}
.isOpen  .btn3 {
  transform: rotate(-45deg) translate(5px, -5px);
}

.hamburger.active {
  transform: rotate(90deg) scale(1.1);
  color: #0077ff;
}





.bookBtn {

  color:inherit;
  padding: 12px 2rem;
  outline: none;
  border: 1px solid var(--clr-primary);
  background: none;
  border-radius: 30px;
  font-weight: var(--ft-w-bold);
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1rem;
  white-space: nowrap;
    cursor: pointer;
}


.btn-primary {
  color: var(--clr-text-1);
  background-color: var(--clr-primary);
  padding: 15px 30px;
  font-weight: var(--ft-w-reg);
  font-size: var(--fts-s);
  cursor: pointer;
}
.header-btn {
    display: none;
      cursor: pointer;
}



.hero-wrapper {

  position: relative;
  overflow: hidden;
  isolation: isolate;  
  line-height: 1.1;
  padding-inline: 20px;
}

.hero-wrapper::before {
  position: absolute;
  content: "";
  height: 100%;
  width: calc(100% - 1.9rem);
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-image: url(images/header-bg.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  z-index: -1;
  background-color: rgba(0, 0, 0, 0.5);
  background-position: center center;
  border-radius: 3rem;

}

.hero-con {
  display: grid;
}


.hero {

  padding: 75px 1rem;
   text-align: center;
   color: black;

}

.hero p {
  font-weight: var(--ft-w-bold);
  font-size: var(--fts-xs);
  
}



.hero h1 {
  font-size: 4.5rem;
  font-weight: var(--ft-w-bold);
  margin-block: 20px 40px; 
}



.white {
  color: var(--clr-text-1);
}
.blue {
  color: var(--clr-primary)
}
.bookTrip-con {
  display: flex;
  align-items: center;
  justify-content: center;
  column-gap: 20px;


  transition: background-color 0.4s ease-in-out;
}
.bookTrip:hover, .bookTrip:focus  {
  background-color: rgb(11, 102, 212);
}

.play {
  width: 50px;
  height: 50px;
  min-width: 50px;
  min-height: 50px;
  border-radius: 50%;
  position: relative;
  background-color: white;
  z-index: 10;
  transition: background-color 0.4s;
    cursor: pointer;
}
.play:hover, .play:focus {
   background-color: var(--clr-primary);
}

.play::before {
  position: absolute;
  content: '';
  background: var(--clr-bg-100);
  width: 20px;
  height: 20px;
  border-radius: 50%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

}

 .play:hover::before, .play:focus::before {
  background-color: white;
}

.play::after {
  position: absolute;
  content: '';
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 5px 6px 5px;
  border-color:  transparent transparent#fcfcfc;
  top: 50%;
  left: 53%;

  transform: translate(-50%, -50%) rotate(90deg);
}

.play:hover::after, .play:focus::after {
border-color:  transparent transparent var(--clr-primary);
}

.hero-image img {
  display: flex;
  width: 100%;

}


.sect {
  padding-top: 4.5rem;
    color: var(--clr-text-0);
 
}
.destination-con {
  text-align: center;

}
.sect-header{
    padding-block: 4rem;
}
.sect-header h2 {
  font-size: var(--fts-norm);
}

.sect-header p {
  font-size: var(--fts-xs);
}

.article-grid {
  display: grid;
  align-items: start;
  padding-inline: 1rem;
  gap: 2rem 1rem;
}


.destination-img img {
  border-radius: 2rem;
  max-width: 100%;
  box-shadow: var(--b-shadow);
}
/* ... */

